force-app/main/default/objects/Activity/fields/Counsellor__c.field-meta.xml
<CustomField>
    <fullName>Counsellor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counsellor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>