force-app/main/default/objects/Activity/fields/Hangout_Link__c.field-meta.xml
<CustomField>
    <fullName>Hangout_Link__c</fullName>
    <label>Hangout Link</label>
    <type>Url</type>
</CustomField>