force-app/main/default/objects/Activity/fields/Send_Invite__c.field-meta.xml
<CustomField>
    <fullName>Send_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invite</label>
    <type>Checkbox</type>
</CustomField>