force-app/main/default/objects/Activity/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>