force-app/main/default/objects/Activity/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Video URL</label>
    <referenceTo>Video__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>